# worker-comfyui

./: .gitignore  Dockerfile  docker-compose.yml  handler.py  pyproject.toml
tests/: test_handler.py
